force-app/main/default/objects/Quote_Document_Product_Alias__mdt/Quote_Document_Product_Alias__mdt.object-meta.xml
<CustomObject>
    <label>Quote Document Product Alias</label>
    <pluralLabel>Quote Document Product Aliases</pluralLabel>
</CustomObject>