force-app/main/default/objects/Quote_Document_Product_Alias__mdt/fields/Alias_Code__c.field-meta.xml
<CustomField>
    <fullName>Alias_Code__c</fullName>
    <inlineHelpText>The customer own part number, printed exactly as entered. This is the one place a printable string is authored as data rather than resolved from the label dictionary, because it is the customer identifier their purchasing system expects - translating or reformatting it would defeat the purpose.</inlineHelpText>
    <label>Alias Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>