force-app/main/default/objects/Quote_Document_Product_Alias__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Order of this part number within its product mapping. Use increments of ten.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>