force-app/main/default/objects/Quote_Document_Product_Alias__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Inactive mappings are ignored entirely, so a mapping can be drafted or retired without affecting any document.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>