force-app/main/default/objects/Quote_Document_Product_Alias__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <inlineHelpText>The vendor product code as it appears on the quote line - matched against SBQQ__ProductCode__c. Every product on a table that uses the PRODUCT_ALIAS expander must be mapped; an unmapped one fails generation rather than falling back to the vendor code.</inlineHelpText>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>