force-app/main/default/objects/Quote_Document_Product_Alias__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <inlineHelpText>This part number RELATIVE share of the quoted line - of both the money and the quantity. Three part numbers weighted 2/1/1 split 100 units into 50/25/25. Weights are proportions, not percentages.</inlineHelpText>
    <label>Weight</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>